--- a/#src/index.html
+++ b/#src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-   <title></title>
+   <title>RunSmart</title>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -11,7 +11,38 @@
 </head>
 
 <body>
+   <header class="promo">
+      <div class="container">
+         <div class="promo__top">
+            <div class="promo__logo">
+               <a href="#"><img src="img/header_logo.png" alt="logo"></a>
+            </div>
+            <div class="promo__official">
+               Официальный представитель
+               <p>Garmin, Polar, Suunto</p>
+            </div>
+            <div class="promo__contacts">
+               <a class="promo__tel" href="tel:+7499922-89-74">+7 (499) 922-89-74</a>
+               <button class="btn btn--small">заказать звонок</button>
+            </div>
+         </div>
 
+         <div class="promo__wrapper">
+            <h1 class="promo__title">Подбор пульсометра</h1>
+            <h2 class="promo__subtitle">с учётом Вашего уровня подготовки</h2>
+
+            <div class="promo__icons">
+               <div class="promo__item"><img src="img/icons/header-timer.png" alt="timer">Время подбора: 10 минут</div>
+               <div class="promo__item"><img src="img/icons/header_delivery.png" alt="delivery">Бесплатная доставка</div>
+               <div class="promo__item"><img src="img/icons/header_mess.png" alt="messenger">Ответим на все вопросы</div>
+            </div>
+
+            <button class="btn btn--big">заказать кОНСУЛЬТАЦИЮ</button>
+            <p class="promo__text">или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a></p>
+         </div>
+
+      </div>
+   </header>
 
    <script src="js/script.min.js"></script>
 </body>
