--- a/#src/index.html
+++ b/#src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-   <title>RunSmart</title>
+   <title>git remote add origin git@github.com:matviuk-rv/RunSmart.git</title>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -32,9 +32,13 @@
             <h2 class="promo__subtitle">с учётом Вашего уровня подготовки</h2>
 
             <div class="promo__icons">
-               <div class="promo__item"><img src="img/icons/header-timer.png" alt="timer">Время подбора: 10 минут</div>
-               <div class="promo__item"><img src="img/icons/header_delivery.png" alt="delivery">Бесплатная доставка</div>
-               <div class="promo__item"><img src="img/icons/header_mess.png" alt="messenger">Ответим на все вопросы</div>
+               <div class="promo__item">
+                  <img src="img/icons/header-timer.png" alt="timer">Время подбора: 10 минут
+               </div>
+               <div class="promo__item"><img src="img/icons/header_delivery.png" alt="delivery">Бесплатная доставка
+               </div>
+               <div class="promo__item"><img src="img/icons/header_mess.png" alt="messenger">Ответим на все вопросы
+               </div>
             </div>
 
             <button class="btn btn--big">заказать кОНСУЛЬТАЦИЮ</button>
@@ -43,6 +47,72 @@
 
       </div>
    </header>
+
+   <main>
+      <div class="feature">
+         <div class="container">
+            <h2 class="feature__title">НАШИ ПРЕИМУЩЕСТВА</h2>
+
+            <div class="feature__wrapper">
+               <div class="feature__item">
+                  <div class="feature__img"><img src="img/icons/feature_item1.png" alt="champions">
+                  </div>
+                  <div class="feature__subtitle">
+                     Делимся опытом
+                  </div>
+                  <div class="feature__text">
+                     Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли
+                     Босфор, готовятся к
+                     соревнованиям по триатлону!
+                  </div>
+               </div>
+
+               <div class="feature__item">
+                  <div class="feature__img"><img src="img/icons/feature_item2.png" alt="champions"></div>
+                  <div class="feature__subtitle">
+                     Заботимся о здоровье
+                  </div>
+                  <div class="feature__text">
+                     Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам
+                     и Вашим близким!
+                  </div>
+               </div>
+
+               <div class="feature__item">
+                  <div class="feature__img"><img src="img/icons/feature_item3.png" alt="champions"></div>
+                  <div class="feature__subtitle">
+                     Учим бегать
+                  </div>
+                  <div class="feature__text">
+                     Помогаем с обучением правильной технике бега! <br>Дружим с крупнейшей школой бега в России - <a
+                        href="#" class="feature__link">I LOVE
+                        RUNNING.</a> </div>
+               </div>
+            </div>
+         </div>
+      </div>
+
+      <section class="communication">
+         <div class="container">
+            <div class="communication__wrapper">
+               <div class="communication__title">
+                  Получите бесплатную консультацию <br>по подбору пульсометра
+               </div>
+               <div class="communication__text">
+                  Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут
+               </div>
+               <div class="communication__form">
+                  <form  class="form" action="#" method="#">
+                     <input type="text" name="user_name" id="user_name" placeholder="Ваше имя" required>
+                     <input type="tel" name="user_phone" id="user_name" placeholder="Ваш телефон" required>
+                     <input type="email" name="user_email" id="user_name" placeholder="Ваш E-mail" required>
+                     <button class="btn btn--big">заказать кОНСУЛЬТАЦИЮ</button>
+                  </form>
+               </div>
+            </div>
+         </div>
+      </section>
+   </main>
 
    <script src="js/script.min.js"></script>
 </body>
