--- a/#src/index.html
+++ b/#src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
-   <title>git remote add origin git@github.com:matviuk-rv/RunSmart.git</title>
+   <title>RunSmart</title>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
+   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
    <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -102,7 +103,7 @@
                   Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут
                </div>
                <div class="communication__form">
-                  <form  class="form" action="#" method="#">
+                  <form class="form" action="#" method="#">
                      <input type="text" name="user_name" id="user_name" placeholder="Ваше имя" required>
                      <input type="tel" name="user_phone" id="user_name" placeholder="Ваш телефон" required>
                      <input type="email" name="user_email" id="user_name" placeholder="Ваш E-mail" required>
@@ -112,8 +113,33 @@
             </div>
          </div>
       </section>
+
+      <section class="slider">
+         <div class="contrainer">
+            <div class="swiper slider__block">
+               <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                     <img src="img/slider/slider1.png" alt="slider 1">
+                  </div>
+                  <div class="swiper-slide">
+                     <img src="img/slider/main_slider.png" alt="main slider">
+                  </div>
+                  <div class="swiper-slide">
+                     <img src="img/slider/slider3.png" alt="slider 3">
+                  </div>
+               </div>
+               <div class="swiper-button-next">
+                  <img src="img/slider/right.png" alt="">
+               </div>
+               <div class="swiper-button-prev">
+                  <img src="img/slider/left.png" alt="">
+               </div>
+            </div>
+         </div>
+      </section>
    </main>
 
+   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
    <script src="js/script.min.js"></script>
 </body>
 
