--- a/#src/index.html
+++ b/#src/index.html
@@ -119,13 +119,13 @@
             <div class="swiper slider__block">
                <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                     <img src="img/slider/slider1.png" alt="slider 1">
+                     <a href="#"><img src="img/slider/slider1.png" alt="slider 1"></a>
                   </div>
                   <div class="swiper-slide">
-                     <img src="img/slider/main_slider.png" alt="main slider">
+                     <a href="#"><img src="img/slider/main_slider.png" alt="main slider"></a>
                   </div>
                   <div class="swiper-slide">
-                     <img src="img/slider/slider3.png" alt="slider 3">
+                     <a href="#"><img src="img/slider/slider3.png" alt="slider 3"></a>
                   </div>
                </div>
                <div class="swiper-button-next">
@@ -135,6 +135,50 @@
                   <img src="img/slider/left.png" alt="">
                </div>
             </div>
+         </div>
+      </section>
+
+
+      <section class="catalog">
+         <div class="container">
+            <h2 class="catalog__title">Каталог пульсометров</h2>
+            <ul class="catalog__tabs">
+               <li class="catalog__tabs-item">
+                  <div>Для фитнеса</div>
+               </li>
+               <li class="catalog__tabs-item">
+                  <div>для бега</div>
+               </li>
+               <li class="catalog__tabs-item">
+                  <div>для триатлона</div>
+               </li>
+            </ul>
+
+            <div class="catalog__content">
+               <div class="catalog-item">
+                  <div class="catalog-item__img">
+                     <img src="img/shop_item.png" alt="shop item">
+                  </div>
+                  <div class="catalog-item__title">
+                     Пульсометр Polar FT1
+                  </div>
+                  <div class="catalog-item__text">
+                     Для первых шагов в тренировках, основанных на сердечном ритме<br>
+                  </div>
+                  <a class="catalog-item__link" href="#">ПОДРОБНЕЕ</a>
+                  <hr>
+                  <div class="catalog-item__wrapper">
+                     <div class="catalog-item__price">
+                        <p class="catalog-item__cena">4 750 руб.</p>
+                        <p class="catalog-item__promo">4 500 руб.</p>
+                     </div>
+                     <button class="catalog-item__btn btn">КУПИТЬ</button>
+                  </div>
+               </div>
+            </div>
+
+            <div class="catalog__content"></div>
+            <div class="catalog__content"></div>
          </div>
       </section>
    </main>
