feat: block catalog+tabs

--- a/#src/index.html
+++ b/#src/index.html
@@ -138,12 +138,12 @@
          </div>
       </section>
 
-
       <section class="catalog">
          <div class="container">
             <h2 class="catalog__title">Каталог пульсометров</h2>
+            <!-- active на таби -->
             <ul class="catalog__tabs">
-               <li class="catalog__tabs-item">
+               <li class="catalog__tabs-item catalog__tabs-item--active">
                   <div data-id="fitnes">Для фитнеса</div>
                </li>
                <li class="catalog__tabs-item">
@@ -153,11 +153,12 @@
                   <div data-id="triatlon">для триатлона</div>
                </li>
             </ul>
+            <!-- active для відображення контанту по табу -->
+            <div class="catalog__content catalog__content--active">
 
-         <div class="catalog__content">
-
-            <div class="catalog-item">
+               <div class="catalog-item">
                   <div class="catalog-item__card">
+                     <!-- active стоїть для передньої обгортки -->
                      <div class="catalog-item__front-side catalog-item__front-side--active">
                         <div class="catalog-item__img">
                            <img src="img/shop_item.png" alt="shop item">
@@ -170,6 +171,7 @@
                         </div>
                         <a class="catalog-item__link" href="#">ПОДРОБНЕЕ</a>
                      </div>
+                     <!-- active виїде задня обгортка -->
                      <div class="catalog-item__back-side">
                         <ul class="catalog-item__list">
                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
@@ -177,28 +179,216 @@
                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                         </ul>
-                        <a class="catalog-item__link" href="#">НАЗАД</a>
+                        <a class="catalog-item__back-link" href="#">НАЗАД</a>
                      </div>
                   </div>
                   <hr>
-                  <div class="catalog-item__wrapper">
+                  <div class="catalog-item__bottom-wrapper">
                      <div class="catalog-item__price">
                         <p class="catalog-item__cena">4 750 руб.</p>
                         <p class="catalog-item__promo">4 500 руб.</p>
                      </div>
                      <button class="catalog-item__btn btn">КУПИТЬ</button>
                   </div>
+               </div>
+
+               <div class="catalog-item">
+                  <div class="catalog-item__card">
+                     <!-- active стоїть для передньої обгортки -->
+                     <div class="catalog-item__front-side catalog-item__front-side--active">
+                        <div class="catalog-item__img">
+                           <img src="img/shop_item.png" alt="shop item">
+                        </div>
+                        <div class="catalog-item__title">
+                           Пульсометр Polar FT1
+                        </div>
+                        <div class="catalog-item__text">
+                           Для первых шагов в тренировках, основанных на сердечном ритме<br>
+                        </div>
+                        <a class="catalog-item__link" href="#">ПОДРОБНЕЕ</a>
+                     </div>
+                     <!-- active виїде задня обгортка -->
+                     <div class="catalog-item__back-side">
+                        <ul class="catalog-item__list">
+                           <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                           <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                           <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                           <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        </ul>
+                        <a class="catalog-item__back-link" href="#">НАЗАД</a>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="catalog-item__bottom-wrapper">
+                     <div class="catalog-item__price">
+                        <p class="catalog-item__cena">4 750 руб.</p>
+                        <p class="catalog-item__promo">4 500 руб.</p>
+                     </div>
+                     <button class="catalog-item__btn btn">КУПИТЬ</button>
+                  </div>
+               </div>
+
+               <div class="catalog-item">
+                  <div class="catalog-item__card">
+                     <!-- active стоїть для передньої обгортки -->
+                     <div class="catalog-item__front-side catalog-item__front-side--active">
+                        <div class="catalog-item__img">
+                           <img src="img/shop_item.png" alt="shop item">
+                        </div>
+                        <div class="catalog-item__title">
+                           Пульсометр Polar FT1
+                        </div>
+                        <div class="catalog-item__text">
+                           Для первых шагов в тренировках, основанных на сердечном ритме<br>
+                        </div>
+                        <a class="catalog-item__link" href="#">ПОДРОБНЕЕ</a>
+                     </div>
+                     <!-- active виїде задня обгортка -->
+                     <div class="catalog-item__back-side">
+                        <ul class="catalog-item__list">
+                           <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                           <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                           <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                           <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        </ul>
+                        <a class="catalog-item__back-link" href="#">НАЗАД</a>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="catalog-item__bottom-wrapper">
+                     <div class="catalog-item__price">
+                        <p class="catalog-item__cena">4 750 руб.</p>
+                        <p class="catalog-item__promo">4 500 руб.</p>
+                     </div>
+                     <button class="catalog-item__btn btn">КУПИТЬ</button>
+                  </div>
+               </div>
+
             </div>
+            <div class="catalog__content">
 
-         </div>
+               <div class="catalog-item">
+                  <div class="catalog-item__card">
+                     <!-- active стоїть для передньої обгортки -->
+                     <div class="catalog-item__front-side catalog-item__front-side--active">
+                        <div class="catalog-item__img">
+                           <img src="img/shop_item.png" alt="shop item">
+                        </div>
+                        <div class="catalog-item__title">
+                           Пульсометр Polar FT1
+                        </div>
+                        <div class="catalog-item__text">
+                           Для первых шагов в тренировках, основанных на сердечном ритме<br>
+                        </div>
+                        <a class="catalog-item__link" href="#">ПОДРОБНЕЕ</a>
+                     </div>
+                     <!-- active виїде задня обгортка -->
+                     <div class="catalog-item__back-side">
+                        <ul class="catalog-item__list">
+                           <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                           <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                           <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                           <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        </ul>
+                        <a class="catalog-item__back-link" href="#">НАЗАД</a>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="catalog-item__bottom-wrapper">
+                     <div class="catalog-item__price">
+                        <p class="catalog-item__cena">4 750 руб.</p>
+                        <p class="catalog-item__promo">4 500 руб.</p>
+                     </div>
+                     <button class="catalog-item__btn btn">КУПИТЬ</button>
+                  </div>
+               </div>
 
-         <div class="catalog__content"></div>
-         <div class="catalog__content"></div>
+               <div class="catalog-item">
+                  <div class="catalog-item__card">
+                     <!-- active стоїть для передньої обгортки -->
+                     <div class="catalog-item__front-side catalog-item__front-side--active">
+                        <div class="catalog-item__img">
+                           <img src="img/shop_item.png" alt="shop item">
+                        </div>
+                        <div class="catalog-item__title">
+                           Пульсометр Polar FT1
+                        </div>
+                        <div class="catalog-item__text">
+                           Для первых шагов в тренировках, основанных на сердечном ритме<br>
+                        </div>
+                        <a class="catalog-item__link" href="#">ПОДРОБНЕЕ</a>
+                     </div>
+                     <!-- active виїде задня обгортка -->
+                     <div class="catalog-item__back-side">
+                        <ul class="catalog-item__list">
+                           <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                           <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                           <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                           <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        </ul>
+                        <a class="catalog-item__back-link" href="#">НАЗАД</a>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="catalog-item__bottom-wrapper">
+                     <div class="catalog-item__price">
+                        <p class="catalog-item__cena">4 750 руб.</p>
+                        <p class="catalog-item__promo">4 500 руб.</p>
+                     </div>
+                     <button class="catalog-item__btn btn">КУПИТЬ</button>
+                  </div>
+               </div>
+
+            </div>
+            <div class="catalog__content">
+
+               <div class="catalog-item">
+                  <div class="catalog-item__card">
+                     <!-- active стоїть для передньої обгортки -->
+                     <div class="catalog-item__front-side catalog-item__front-side--active">
+                        <div class="catalog-item__img">
+                           <img src="img/shop_item.png" alt="shop item">
+                        </div>
+                        <div class="catalog-item__title">
+                           Пульсометр Polar FT1
+                        </div>
+                        <div class="catalog-item__text">
+                           Для первых шагов в тренировках, основанных на сердечном ритме<br>
+                        </div>
+                        <a class="catalog-item__link" href="#">ПОДРОБНЕЕ</a>
+                     </div>
+                     <!-- active виїде задня обгортка -->
+                     <div class="catalog-item__back-side">
+                        <ul class="catalog-item__list">
+                           <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                           <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                           <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                           <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        </ul>
+                        <a class="catalog-item__back-link" href="#">НАЗАД</a>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="catalog-item__bottom-wrapper">
+                     <div class="catalog-item__price">
+                        <p class="catalog-item__cena">4 750 руб.</p>
+                        <p class="catalog-item__promo">4 500 руб.</p>
+                     </div>
+                     <button class="catalog-item__btn btn">КУПИТЬ</button>
+                  </div>
+               </div>
+
+            </div>
          </div>
+      </section>
+
+      <section class="feedback">
+         
       </section>
    </main>
 
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
    <script src="js/script.min.js"></script>
 </body>
 
