--- a/#src/index.html
+++ b/#src/index.html
@@ -153,6 +153,7 @@
                   <div data-id="triatlon">для триатлона</div>
                </li>
             </ul>
+
             <!-- active для відображення контанту по табу -->
             <div class="catalog__content catalog__content--active">
 
@@ -383,7 +384,53 @@
       </section>
 
       <section class="feedback">
-         
+         <div class="container">
+            <h2 class="feedback__title">отзывы клиентов</h2>
+            <div class="feedback__wrapper">
+               <div class="feedback__item">
+                  <div class="feedback__image">
+                     <img src="img/respond_item1.png" alt="feedback photo user">
+                  </div>
+                  <div class="feedback__contents">
+                     <div class="feedback__heading">Ирина Иванченко </div>
+                     <div class="feedback__subtitle">2 полумарафона</div>
+                     <div class="feedback__text">
+                        <p>Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.</p>
+                        <p>Новые цели - новый гаджет!</p>
+                        <p>Спасибо, RunSmart!</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="feedback__item">
+                  <div class="feedback__image">
+                     <img src="img/respond_item2.png" alt="feedback photo user">
+                  </div>
+                  <div class="feedback__contents">
+                     <div class="feedback__heading">Иван Сёмочкин</div>
+                     <div class="feedback__subtitle">1 полумарафон</div>
+                     <div class="feedback__text">
+                        <p>Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.</p>
+                        <p>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.</p>
+                        <p>С ними подготовился к своему первому полумарафону! Спасибо!!!</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="feedback__item">
+                  <div class="feedback__image">
+                     <img src="img/respond_item3.png" alt="feedback photo user">
+                  </div>
+                  <div class="feedback__contents">
+                     <div class="feedback__heading">Юлия Дашкина</div>
+                     <div class="feedback__subtitle">2 полумарафона</div>
+                     <div class="feedback__text">
+                        <p>Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.</p>
+                        <p>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!</p>
+                        <p>Спасибо!!!</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
       </section>
    </main>
 
