--- a/#src/index.html
+++ b/#src/index.html
@@ -395,7 +395,9 @@
                      <div class="feedback__heading">Ирина Иванченко </div>
                      <div class="feedback__subtitle">2 полумарафона</div>
                      <div class="feedback__text">
-                        <p>Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.</p>
+                        <p>Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который
+                           подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить
+                           гаджет - не раздумывая обратилась туда же.</p>
                         <p>Новые цели - новый гаджет!</p>
                         <p>Спасибо, RunSmart!</p>
                      </div>
@@ -410,7 +412,9 @@
                      <div class="feedback__subtitle">1 полумарафон</div>
                      <div class="feedback__text">
                         <p>Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.</p>
-                        <p>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.</p>
+                        <p>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку,
+                           научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план
+                           тренировок на месяц вперёд.</p>
                         <p>С ними подготовился к своему первому полумарафону! Спасибо!!!</p>
                      </div>
                   </div>
@@ -423,8 +427,11 @@
                      <div class="feedback__heading">Юлия Дашкина</div>
                      <div class="feedback__subtitle">2 полумарафона</div>
                      <div class="feedback__text">
-                        <p>Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.</p>
-                        <p>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!</p>
+                        <p>Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я
+                           бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.</p>
+                        <p>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со
+                           скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более
+                           коротких забегов и не намерена останавливаться!</p>
                         <p>Спасибо!!!</p>
                      </div>
                   </div>
@@ -433,6 +440,23 @@
          </div>
       </section>
    </main>
+
+   <footer class="footer">
+      <div class="footer__map">
+         <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.4417740833105!2d37.64632008127621!3d55.768198829752514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRltGPLCAxMDcwNzg!5e0!3m2!1suk!2spl!4v1643483300724!5m2!1suk!2spl"
+            width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+      <div class="footer__info">
+         <address class="footer__adress">Москва, Мясницкий пр-д, 4/3</address>
+         <a class="footer__phone" href="tel:+84999228974">8 (499) 922-89-74</a>
+            <div class="footer__social">
+               <a href="#" class="footer__social-item"><img src="img/icons/facebook.svg" alt="facebook"></a>
+               <a href="#" class="footer__social-item"><img src="img/icons/instagram.svg" alt="instagram"></a>
+               <a href="#" class="footer__social-item"><img src="img/icons/pinterest.svg" alt="pinterest"></a>
+            </div>
+      </div>
+   </footer>
 
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
