--- a/#src/index.html
+++ b/#src/index.html
@@ -50,7 +50,7 @@
    </header>
 
    <main>
-      <div class="feature">
+      <section class="feature">
          <div class="container">
             <h2 class="feature__title">НАШИ ПРЕИМУЩЕСТВА</h2>
 
@@ -91,7 +91,7 @@
                </div>
             </div>
          </div>
-      </div>
+      </section>
 
       <section class="communication">
          <div class="container">
@@ -450,13 +450,49 @@
       <div class="footer__info">
          <address class="footer__adress">Москва, Мясницкий пр-д, 4/3</address>
          <a class="footer__phone" href="tel:+84999228974">8 (499) 922-89-74</a>
-            <div class="footer__social">
-               <a href="#" class="footer__social-item"><img src="img/icons/facebook.svg" alt="facebook"></a>
-               <a href="#" class="footer__social-item"><img src="img/icons/instagram.svg" alt="instagram"></a>
-               <a href="#" class="footer__social-item"><img src="img/icons/pinterest.svg" alt="pinterest"></a>
-            </div>
+         <div class="footer__social">
+            <a href="#" class="footer__social-item"><img src="img/icons/facebook.svg" alt="facebook"></a>
+            <a href="#" class="footer__social-item"><img src="img/icons/instagram.svg" alt="instagram"></a>
+            <a href="#" class="footer__social-item"><img src="img/icons/pinterest.svg" alt="pinterest"></a>
+         </div>
       </div>
    </footer>
+
+   <div class="popup">
+      <div class="modal" id="consultation">
+         <div class="modal__close">&times;</div>
+         <div class="modal__title">Просто заполните форму заявки</div>
+         <div class="modal__subtitle">и мы перезвоним вам в течении 10 минут</div>
+         <div class="communication__form">
+            <form class="form" action="#" method="#">
+               <input type="text" name="user_name" id="user_name" placeholder="Ваше имя" required>
+               <input type="tel" name="user_phone" id="user_name" placeholder="Ваш телефон" required>
+               <input type="email" name="user_email" id="user_name" placeholder="Ваш E-mail" required>
+               <button class="btn btn--big">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
+         </div>
+      </div>
+
+      <div class="modal" id="order">
+         <div class="modal__close">&times;</div>
+         <div class="modal__title">Ваш заказ:</div>
+         <div class="modal__subtitle">Пульсометр Polar FT1</div>
+         <div class="communication__form">
+            <form class="form" action="#" method="#">
+               <input type="text" name="user_name" id="user_name" placeholder="Ваше имя" required>
+               <input type="tel" name="user_phone" id="user_name" placeholder="Ваш телефон" required>
+               <input type="email" name="user_email" id="user_name" placeholder="Ваш E-mail" required>
+               <button class="btn btn--big">Купить</button>
+            </form>
+         </div>
+      </div>
+
+      <div class="modal modal--mini" id="thanks">
+         <div class="modal__close">&times;</div>
+         <div class="modal__title">Спасибо за вашу заявку!</div>
+         <div class="modal__subtitle">Наш менеджер свяжется с вами в ближайшее время!</div>
+      </div>
+   </div>
 
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
