feat: popup action

--- a/#src/index.html
+++ b/#src/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="promo__contacts">
                <a class="promo__tel" href="tel:+7499922-89-74">+7 (499) 922-89-74</a>
-               <button class="btn btn--small">заказать звонок</button>
+               <button class="btn btn--small" data-modul="consultation">заказать звонок</button>
             </div>
          </div>
 
@@ -42,7 +42,7 @@
                </div>
             </div>
 
-            <button class="btn btn--big">заказать кОНСУЛЬТАЦИЮ</button>
+            <button class="btn btn--big" data-modul="consultation">заказать кОНСУЛЬТАЦИЮ</button>
             <p class="promo__text">или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a></p>
          </div>
 
@@ -201,7 +201,7 @@
                            <img src="img/shop_item.png" alt="shop item">
                         </div>
                         <div class="catalog-item__title">
-                           Пульсометр Polar FT1
+                           Пульсометр Polar FT2
                         </div>
                         <div class="catalog-item__text">
                            Для первых шагов в тренировках, основанных на сердечном ритме<br>
@@ -237,7 +237,7 @@
                            <img src="img/shop_item.png" alt="shop item">
                         </div>
                         <div class="catalog-item__title">
-                           Пульсометр Polar FT1
+                           Пульсометр Polar FT3
                         </div>
                         <div class="catalog-item__text">
                            Для первых шагов в тренировках, основанных на сердечном ритме<br>
