feat: validator form

--- a/#src/index.html
+++ b/#src/index.html
@@ -103,10 +103,10 @@
                   Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут
                </div>
                <div class="communication__form">
-                  <form class="form" action="#" method="#">
-                     <input type="text" name="user_name" id="user_name" placeholder="Ваше имя" required>
-                     <input type="tel" name="user_phone" id="user_name" placeholder="Ваш телефон" required>
-                     <input type="email" name="user_email" id="user_name" placeholder="Ваш E-mail" required>
+                  <form class="form" action="#" method="#" id="communication__form">
+                     <input type="text" name="user_name"  placeholder="Ваше имя">
+                     <input type="tel" name="user_phone"  placeholder="Ваш телефон">
+                     <input type="email" name="user_email"  placeholder="Ваш E-mail">
                      <button class="btn btn--big">заказать кОНСУЛЬТАЦИЮ</button>
                   </form>
                </div>
@@ -465,9 +465,9 @@
          <div class="modal__subtitle">и мы перезвоним вам в течении 10 минут</div>
          <div class="communication__form">
             <form class="form" action="#" method="#">
-               <input type="text" name="user_name" id="user_name" placeholder="Ваше имя" required>
-               <input type="tel" name="user_phone" id="user_name" placeholder="Ваш телефон" required>
-               <input type="email" name="user_email" id="user_name" placeholder="Ваш E-mail" required>
+               <input type="text" name="user_name"  placeholder="Ваше имя">
+               <input type="tel" name="user_phone"  placeholder="Ваш телефон">
+               <input type="email" name="user_email" placeholder="Ваш E-mail">
                <button class="btn btn--big">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
          </div>
@@ -479,9 +479,10 @@
          <div class="modal__subtitle">Пульсометр Polar FT1</div>
          <div class="communication__form">
             <form class="form" action="#" method="#">
-               <input type="text" name="user_name" id="user_name" placeholder="Ваше имя" required>
-               <input type="tel" name="user_phone" id="user_name" placeholder="Ваш телефон" required>
-               <input type="email" name="user_email" id="user_name" placeholder="Ваш E-mail" required>
+               <form class="form" action="#" method="#">
+                  <input type="text" name="user_name"  placeholder="Ваше имя">
+                  <input type="tel" name="user_phone"  placeholder="Ваш телефон">
+                  <input type="email" name="user_email" placeholder="Ваш E-mail">
                <button class="btn btn--big">Купить</button>
             </form>
          </div>
@@ -496,6 +497,7 @@
 
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+   <script src="js/jquery.validate.min.js"></script>
    <script src="js/script.min.js"></script>
 </body>
 
