feat: form validate + mask phone

--- a/#src/index.html
+++ b/#src/index.html
@@ -103,7 +103,7 @@
                   Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут
                </div>
                <div class="communication__form">
-                  <form class="form" action="#" method="#" id="communication__form">
+                  <form class="form form-white" action="#" method="#" id="communication__form">
                      <input type="text" name="user_name"  placeholder="Ваше имя">
                      <input type="tel" name="user_phone"  placeholder="Ваш телефон">
                      <input type="email" name="user_email"  placeholder="Ваш E-mail">
@@ -498,6 +498,7 @@
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
    <script src="js/jquery.validate.min.js"></script>
+   <script src="js/jquery.mask.min.js"></script>
    <script src="js/script.min.js"></script>
 </body>
 
