--- a/#src/index.html
+++ b/#src/index.html
@@ -103,7 +103,7 @@
                   Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут
                </div>
                <div class="communication__form">
-                  <form class="form form-white" action="#" method="#" id="communication__form">
+                  <form class="form form-white" action="#" id="communication__form">
                      <input type="text" name="user_name"  placeholder="Ваше имя">
                      <input type="tel" name="user_phone"  placeholder="Ваш телефон">
                      <input type="email" name="user_email"  placeholder="Ваш E-mail">
@@ -464,7 +464,7 @@
          <div class="modal__title">Просто заполните форму заявки</div>
          <div class="modal__subtitle">и мы перезвоним вам в течении 10 минут</div>
          <div class="communication__form">
-            <form class="form" action="#" method="#">
+            <form class="form" action="#">
                <input type="text" name="user_name"  placeholder="Ваше имя">
                <input type="tel" name="user_phone"  placeholder="Ваш телефон">
                <input type="email" name="user_email" placeholder="Ваш E-mail">
@@ -478,8 +478,7 @@
          <div class="modal__title">Ваш заказ:</div>
          <div class="modal__subtitle">Пульсометр Polar FT1</div>
          <div class="communication__form">
-            <form class="form" action="#" method="#">
-               <form class="form" action="#" method="#">
+            <form class="form" action="#">
                   <input type="text" name="user_name"  placeholder="Ваше имя">
                   <input type="tel" name="user_phone"  placeholder="Ваш телефон">
                   <input type="email" name="user_email" placeholder="Ваш E-mail">
