--- a/#src/index.html
+++ b/#src/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-   <header class="promo">
+   <header class="promo" id="up">
       <div class="container">
          <div class="promo__top">
             <div class="promo__logo">
@@ -493,6 +493,10 @@
          <div class="modal__subtitle">Наш менеджер свяжется с вами в ближайшее время!</div>
       </div>
    </div>
+
+   <a href="#up" class="up">
+      <img src="img/icons/up.svg" alt="up page" class="up__img">
+   </a>
 
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
