--- a/#src/index.html
+++ b/#src/index.html
@@ -387,7 +387,7 @@
          <div class="container">
             <h2 class="feedback__title">отзывы клиентов</h2>
             <div class="feedback__wrapper">
-               <div class="feedback__item">
+               <div class="feedback__item fadeInLeft wow">
                   <div class="feedback__image">
                      <img src="img/respond_item1.png" alt="feedback photo user">
                   </div>
@@ -403,7 +403,7 @@
                      </div>
                   </div>
                </div>
-               <div class="feedback__item">
+               <div class="feedback__item fadeInRight wow">
                   <div class="feedback__image">
                      <img src="img/respond_item2.png" alt="feedback photo user">
                   </div>
@@ -419,7 +419,7 @@
                      </div>
                   </div>
                </div>
-               <div class="feedback__item">
+               <div class="feedback__item fadeInLeft wow">
                   <div class="feedback__image">
                      <img src="img/respond_item3.png" alt="feedback photo user">
                   </div>
@@ -502,6 +502,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
    <script src="js/jquery.validate.min.js"></script>
    <script src="js/jquery.mask.min.js"></script>
+   <script src="js/wow.min.js"></script>
    <script src="js/script.min.js"></script>
 </body>
 
