--- a/#src/index.html
+++ b/#src/index.html
@@ -120,13 +120,22 @@
             <div class="swiper slider__block">
                <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                     <a href="#"><img src="img/slider/slider1.png" alt="slider 1"></a>
+                     <a href="#"><img src="img/slider/slider3.png" alt="slider 1"></a>
                   </div>
                   <div class="swiper-slide">
-                     <a href="#"><img src="img/slider/main_slider.png" alt="main slider"></a>
+                     <a href="#"><img src="img/slider/slider6.png" alt="main slider"></a>
                   </div>
                   <div class="swiper-slide">
-                     <a href="#"><img src="img/slider/slider3.png" alt="slider 3"></a>
+                     <a href="#"><img src="img/slider/main_slider.png" alt="slider 3"></a>
+                  </div>
+                  <div class="swiper-slide">
+                     <a href="#"><img src="img/slider/slider1.png" alt="slider 4"></a>
+                  </div>
+                  <div class="swiper-slide">
+                     <a href="#"><img src="img/slider/slider5.jpg" alt="slider 5"></a>
+                  </div>
+                  <div class="swiper-slide">
+                     <a href="#"><img src="img/slider/slider4.jpg" alt="slider 6"></a>
                   </div>
                </div>
                <div class="swiper-button-next">
